--- a/src/styling/scss/Navbar.scss
+++ b/src/styling/scss/Navbar.scss
@@ -1,5 +1,5 @@
 .nav {
-    background-color: #7f699e;
+    background-color: #0F2C59;
     height: 100%;
     margin: auto;
     margin-right: 0;
@@ -20,7 +20,7 @@
 
 .link {   
     all: unset;
-    color: #E9D5CA;
+    color: #EAD7BB;
     cursor: pointer;
     margin-top: 1em;
     margin-bottom: 8em;
@@ -32,6 +32,7 @@
 .endnote {
     font-size: 0.7em;
     text-align: center;
+    color: #EAD7BB;
 }
 
 #disable {
