--- a/src/styling/scss/ProjectCard.scss
+++ b/src/styling/scss/ProjectCard.scss
@@ -11,7 +11,7 @@
 }
 
 .project-details {
-    background-color: #827397dd;
+    background-color: #103d6ec3;
     border-top-right-radius: 2em;
     border-bottom-right-radius: 2em;
     width: 40em;
@@ -32,7 +32,7 @@
 }
 
 .project-icon {
-    color: #D7B19D;
+    color: #EAD7BB;
     font-size: 2em;
     align-self: center;
     margin-bottom: 0.2em;
@@ -42,7 +42,7 @@
 }
 
 .project-icon:hover {
-    color: #6F4C5B;
+    color: #725d55;
     transition: 0.45s;
     -webkit-transition: 0.45s;
 }
