--- a/src/styling/scss/BlogPage.scss
+++ b/src/styling/scss/BlogPage.scss
@@ -1,39 +1,26 @@
-.projects {
+.minihub {
     margin: auto;
     margin-top: 1.5%;
     margin-left: 3%;
     margin-right: 1%;
     font-family: ArimoPara;
     width: 90%;
-    color: #d7c0aeed;
 }
 
-.projects h2, .projects h1 {
+.minihub h2, .minihub h1 {
     font-family: IBMBold;
     letter-spacing: 0.1em;
     font-size: 1.9em;
-    color: #0F2C59;
-    text-shadow: 2px 2px #06101e;
+    color: #06101e;
+    text-shadow: 2px 2px #103d6ec3;
     width: fit-content;
 }
 
-.projects h1 {
-    background-color: #725d55c4;
+.minihub h1 {
+    background-color: #a0c3d2e3;
     width: fit-content;
     letter-spacing: 0.05em;
     font-size: 2.1em;
     border-radius: 0.4em;
     padding: 1rem;
-}
-
-.gallery {
-    background-color: #725d55c4;
-    padding: 2em;
-    border-radius: 1.5em;
-}
-
-.projects h2 {
-    color: #A0C3D2;
-    margin: auto;
-    margin-top: 0.2em;
 }
