--- a/src/styling/scss/ResumeCard.scss
+++ b/src/styling/scss/ResumeCard.scss
@@ -1,5 +1,5 @@
 .card {
-    background-color: #3e3062c7;
+    background-color: #0f2d59c8;
     padding: 1rem;
     border-radius: 2rem;
     color: #2b231c;
@@ -9,7 +9,7 @@
 }
 
 .company_position {
-    background-color: #C1A1D3;
+    background-color: #A0C3D2;
     font-family: IBMBold;
     margin-bottom: 0.3em;
     padding-right: 0.2em;
@@ -27,17 +27,17 @@
 .company_name:hover {
     transition: 0.45s;
     -webkit-transition: 0.45s;
-    background-color: #6F4C5B;
-    color: #E9D5CA;
+    background-color: #725d55;
+    color: #392424;
 }
 
 .company_name, .position_location, .position_time {
-    background-color: #E9D5CA;
+    background-color: #06101e; 
+    color: #EAD7BB;
     margin-bottom: 0.3em;
     padding-right: 0.2em;
     padding-left: 0.2em;
 }
-
 
 .info {
     display: flex;
@@ -56,7 +56,7 @@
     font-family: IBMRegular;
     padding-bottom: 1em;
     font-size: 1.05rem;
-    color: #cabcae;
+    color: #EAD7BB;
 }
 
 .tags {
@@ -66,7 +66,7 @@
 }
 
 .tag {
-    background-color: #C1A1D3;
+    background-color: #A0C3D2;
     border-radius: 0.5rem;
     padding: 0.3em;
     min-width: 2.5em;
@@ -77,7 +77,7 @@
 @media (max-width: 450px) {
     .tag {
         font-size: 0.5em;
-        background-color: #C1A1D3;
+        background-color: #A0C3D2;
         border-radius: 0.2rem;
         word-wrap: break-word;
         text-align: center;
